# amplifier-collection-recipes

./: MANIFEST.in  README.md  pyproject.toml
agents/: recipe-author.md
amplifier_collection_recipes/: __init__.py  pyproject.toml
docs/: BEST_PRACTICES.md  RECIPES_GUIDE.md  RECIPE_SCHEMA.md  TROUBLESHOOTING.md
examples/: code-review-recipe.yaml  conditional-workflow.yaml  dependency-upgrade-staged-recipe.yaml  multi-file-analysis.yaml  parallel-analysis-recipe.yaml  ultra-minimal-test.yaml
modules/tool-recipes/: README.md  pyproject.toml
modules/tool-recipes/amplifier_module_tool_recipes/: __init__.py  executor.py  expression_evaluator.py  models.py  session.py  validator.py
modules/tool-recipes/tests/: __init__.py  conftest.py  test_approval_gates.py  test_executor.py  test_executor_conditions.py  test_executor_loops.py  test_expression_evaluator.py  test_models.py  test_session.py  test_validator.py
profiles/: recipe-dev.md
tools/tool-recipes/amplifier_module_tool_recipes/: models.py
tools/tool-recipes/tests/: conftest.py  test_models.py
