[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recipes"
version = "0.1.0"
description = "Multi-step AI agent orchestration for repeatable workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Microsoft Amplifier Team", email = "amplifier@microsoft.com" }
]

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-collection-recipes"
Repository = "https://github.com/microsoft/amplifier-collection-recipes"
Documentation = "https://github.com/microsoft/amplifier-collection-recipes/tree/main/docs"
Issues = "https://github.com/microsoft/amplifier-collection-recipes/issues"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.json"]

[tool.amplifier.collection]
author = "Microsoft Amplifier Team"
capabilities = [
    "multi-step-workflows",
    "agent-orchestration",
    "recipe-execution",
    "conversational-authoring"
]
modules = [
    { type = "tool", path = "modules/tool-recipes" },
]
agents = [
    { name = "recipe-author", path = "agents/recipe-author.md" },
]
