[project]
name = "amplifier-module-tool-recipes"
version = "0.1.0"
description = "Tool module for executing multi-step AI agent recipes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Microsoft", email = "amplifier@microsoft.com" }
]

dependencies = [
    "pyyaml>=6.0",
]

[project.entry-points."amplifier.modules"]
tool-recipes = "amplifier_module_tool_recipes:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_recipes"]
